# google

./: .gitignore  README.md
google/: .bowerrc  app.py  bower.json
google/indexer/: CMakeLists.txt  hash.c  hash.h  hashWriter.c  hashWriter.h  main.c  merge.c  merge.h  postingList.c  postingList.h  search.c  search.h  stem.c  stem.h
google/templates/: base.html  index.html  result.html
